Add apt-get dotbot plugin

--- a/install
+++ b/install
@@ -8,7 +8,9 @@ DOTBOT_DIR="bin/dotbot"
 DOTBOT_BIN="bin/dotbot"
 BASEDIR="$(cd "$(dirname "${BASH_SOURCE[0]}")" && pwd)"
 
+DOTBOT_APT_GET_PLUGIN="bin/dotbot-apt-get"
+
 cd "${BASEDIR}"
 git submodule update --init --recursive "${DOTBOT_DIR}"
 
-"${BASEDIR}/${DOTBOT_DIR}/${DOTBOT_BIN}" -d "${BASEDIR}" -c "${CONFIG}" "${@}"
+"${BASEDIR}/${DOTBOT_DIR}/${DOTBOT_BIN}" -d "${BASEDIR}" --plugin-dir $DOTBOT_APT_GET_PLUGIN -c "${CONFIG}" "${@}"
